# euclid_wanderer

./: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: wanderer.cfg
launch/: realsense_wanderer.launch
src/: wanderer_nodelet.cpp  wanderer_nodelet.h
